feat: VIP2.0弹窗和月报弹窗不同时出现

--- a/HYNewNest/Features(主代码)/MeComponent/Controller/CNMineVC.xib
+++ b/HYNewNest/Features(主代码)/MeComponent/Controller/CNMineVC.xib
@@ -820,8 +820,8 @@
                                             </userDefinedRuntimeAttributes>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="百家乐、炸金花 、骰包..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NmA-yG-xIv">
-                                            <rect key="frame" x="111.33333333333334" y="63" width="115.33333333333334" height="12"/>
-                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="10"/>
+                                            <rect key="frame" x="111.33333333333333" y="60.000000000000007" width="187.66666666666669" height="14.333333333333336"/>
+                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
                                             <color key="textColor" white="1" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -846,7 +846,7 @@
                                             </connections>
                                         </button>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="沙巴体育" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1ec-1z-w9j">
-                                            <rect key="frame" x="111.33333333333334" y="35.666666666666629" width="65.333333333333343" height="19.333333333333329"/>
+                                            <rect key="frame" x="111.33333333333334" y="30.666666666666629" width="65.333333333333343" height="19.333333333333329"/>
                                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
@@ -854,7 +854,8 @@
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
-                                        <constraint firstItem="1ec-1z-w9j" firstAttribute="centerY" secondItem="DJk-mb-UDh" secondAttribute="centerY" constant="-10" id="6Aw-U8-ch0"/>
+                                        <constraint firstItem="YWN-ak-Fsx" firstAttribute="leading" secondItem="NmA-yG-xIv" secondAttribute="trailing" constant="10" id="3YC-od-xAu"/>
+                                        <constraint firstItem="1ec-1z-w9j" firstAttribute="centerY" secondItem="DJk-mb-UDh" secondAttribute="centerY" constant="-15" id="6Aw-U8-ch0"/>
                                         <constraint firstAttribute="bottom" secondItem="CLs-5Q-0PD" secondAttribute="bottom" constant="15" id="6vy-zY-lqF"/>
                                         <constraint firstItem="CLs-5Q-0PD" firstAttribute="leading" secondItem="DJk-mb-UDh" secondAttribute="leading" constant="15" id="CXN-lG-EPL"/>
                                         <constraint firstItem="sgA-Zd-taH" firstAttribute="top" secondItem="DJk-mb-UDh" secondAttribute="top" id="DTE-df-Q2Y"/>
@@ -865,7 +866,7 @@
                                         <constraint firstAttribute="trailing" secondItem="YWN-ak-Fsx" secondAttribute="trailing" constant="15" id="ml7-36-tV1"/>
                                         <constraint firstItem="1ec-1z-w9j" firstAttribute="leading" secondItem="CLs-5Q-0PD" secondAttribute="trailing" constant="15" id="npr-p4-RLE"/>
                                         <constraint firstItem="NmA-yG-xIv" firstAttribute="leading" secondItem="1ec-1z-w9j" secondAttribute="leading" id="rGn-Dz-E0C"/>
-                                        <constraint firstItem="NmA-yG-xIv" firstAttribute="top" secondItem="1ec-1z-w9j" secondAttribute="bottom" constant="8" id="tmy-rd-FgG"/>
+                                        <constraint firstItem="NmA-yG-xIv" firstAttribute="top" secondItem="1ec-1z-w9j" secondAttribute="bottom" constant="10" id="tmy-rd-FgG"/>
                                         <constraint firstItem="CLs-5Q-0PD" firstAttribute="top" secondItem="DJk-mb-UDh" secondAttribute="top" constant="15" id="wX8-Es-IV1"/>
                                     </constraints>
                                     <userDefinedRuntimeAttributes>
@@ -953,7 +954,7 @@
         <image name="xm" width="24" height="24"/>
         <image name="xx" width="24" height="24"/>
         <image name="xz" width="345" height="100"/>
-        <image name="yaoqing" width="345" height="91"/>
+        <image name="yaoqing" width="345" height="90"/>
         <image name="yhk" width="24" height="24"/>
         <image name="yjfk" width="24" height="24"/>
         <image name="zb" width="40" height="40"/>
