--- a/HYNewNest/Features(主代码)/VIPComponent/VIPCumulateIdentity/View/VIPCumulateIdHeader.xib
+++ b/HYNewNest/Features(主代码)/VIPComponent/VIPCumulateIdentity/View/VIPCumulateIdHeader.xib
@@ -27,6 +27,7 @@
                         <color key="titleColor" red="0.75686274509803919" green="0.74901960784313726" blue="0.73333333333333328" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                     <connections>
+                        <action selector="didTapSwitchRankBtn:" destination="iN0-l3-epB" eventType="touchUpInside" id="8Hf-XY-YpF"/>
                         <action selector="didTapSwitchRankBtn:" destination="-1" eventType="touchUpInside" id="MpX-5g-b9J"/>
                     </connections>
                 </button>
