--- a/HYNewNest/Features(主代码)/VIPComponent/VIPCumulateIdentity/Controller/HYVIPCumulateIdVC.xib
+++ b/HYNewNest/Features(主代码)/VIPComponent/VIPCumulateIdentity/Controller/HYVIPCumulateIdVC.xib
@@ -63,7 +63,7 @@
                                     <color key="textColor" red="0.33333333333333331" green="0.27450980392156865" blue="0.10588235294117647" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JPJ-eh-Rz3" customClass="VIPCumulateIdButton">
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JPJ-eh-Rz3">
                                     <rect key="frame" x="279" y="12" width="94" height="46"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="94" id="GMk-1Z-Z6d"/>
