--- a/HYNewNest/Features(主代码)/VIPComponent/VIPCumulateIdentity/Controller/HYVIPCumulateIdVC.xib
+++ b/HYNewNest/Features(主代码)/VIPComponent/VIPCumulateIdentity/Controller/HYVIPCumulateIdVC.xib
@@ -20,6 +20,7 @@
                 <outlet property="lblDuzunNum" destination="lOh-vE-MiA" id="2mB-Na-6fX"/>
                 <outlet property="lblPlsLogin" destination="c16-oO-aAI" id="BAO-k4-bdx"/>
                 <outlet property="stackViewLJSF" destination="9pH-Af-Axw" id="yul-c9-2jE"/>
+                <outlet property="superScrollView" destination="ST5-FC-0uI" id="ZcM-wP-9eG"/>
                 <outlet property="tableView" destination="Pzq-y3-gu4" id="alu-bh-UeB"/>
                 <outlet property="view" destination="GZk-HG-8up" id="fsW-Eu-yMy"/>
                 <outlet property="viewLJSF" destination="zqB-YL-GPX" id="3Y5-uC-Msy"/>
@@ -30,7 +31,7 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" tag="888" contentMode="scaleToFill" contentInsetAdjustmentBehavior="never" translatesAutoresizingMaskIntoConstraints="NO" id="ST5-FC-0uI">
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" contentInsetAdjustmentBehavior="never" translatesAutoresizingMaskIntoConstraints="NO" id="ST5-FC-0uI">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="编组 2" translatesAutoresizingMaskIntoConstraints="NO" id="N7f-2i-A5F">
@@ -345,7 +346,7 @@
                                 <action selector="didTapReceiveRecord:" destination="-1" eventType="touchUpInside" id="aIF-Eh-CD0"/>
                             </connections>
                         </button>
-                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" delaysContentTouches="NO" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="258" estimatedRowHeight="-1" sectionHeaderHeight="47" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Pzq-y3-gu4">
+                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" delaysContentTouches="NO" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="258" estimatedRowHeight="-1" sectionHeaderHeight="47" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Pzq-y3-gu4" customClass="VIPGiftTableView">
                             <rect key="frame" x="16" y="293" width="382" height="896"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             <connections>
