--- a/HYNewNest/Features(主代码)/VIPComponent/VIPCumulateIdentity/View/VIPCumulateIdCell.xib
+++ b/HYNewNest/Features(主代码)/VIPComponent/VIPCumulateIdentity/View/VIPCumulateIdCell.xib
@@ -10,14 +10,13 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="VIPCumulateIdCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" translatesAutoresizingMaskIntoConstraints="NO" id="KGk-i7-Jjw" customClass="VIPCumulateIdCell">
             <rect key="frame" x="0.0" y="0.0" width="349" height="258"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="349" height="258"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wnq-Nd-xME">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wnq-Nd-xME">
                         <rect key="frame" x="0.0" y="0.0" width="349" height="173"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="173" id="Udb-lE-tPJ"/>
@@ -78,6 +77,7 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="zje-7O-8Kb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="1dQ-54-bvy"/>
+                    <constraint firstAttribute="bottom" secondItem="IA4-1H-QG1" secondAttribute="bottom" constant="15" id="3Al-l3-3bp"/>
                     <constraint firstItem="IA4-1H-QG1" firstAttribute="top" secondItem="wnq-Nd-xME" secondAttribute="bottom" id="8wD-Cw-17M"/>
                     <constraint firstItem="wnq-Nd-xME" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="AFD-NJ-g60"/>
                     <constraint firstItem="wnq-Nd-xME" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Tan-cd-MXl"/>
@@ -93,6 +93,7 @@
                 <outlet property="btnReceive" destination="Cub-8K-bxQ" id="Ng5-4u-QMt"/>
                 <outlet property="centerBGView" destination="IA4-1H-QG1" id="yC7-5x-Naw"/>
                 <outlet property="giftImgv" destination="wnq-Nd-xME" id="ffm-fx-Qxv"/>
+                <outlet property="imgviewHeightCons" destination="Udb-lE-tPJ" id="bYj-Oc-YZi"/>
                 <outlet property="lblContent" destination="YeB-Wm-LhF" id="hjO-IX-r86"/>
                 <outlet property="lblTitle" destination="4lw-6M-yFx" id="zKW-h9-jes"/>
             </connections>
