--- a/HYNewNest/Features(主代码)/VIPComponent/VIPCumulateIdentity/Controller/HYVIPCumulateIdVC.xib
+++ b/HYNewNest/Features(主代码)/VIPComponent/VIPCumulateIdentity/Controller/HYVIPCumulateIdVC.xib
@@ -31,7 +31,7 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" contentInsetAdjustmentBehavior="never" translatesAutoresizingMaskIntoConstraints="NO" id="ST5-FC-0uI">
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" contentInsetAdjustmentBehavior="never" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ST5-FC-0uI">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="编组 2" translatesAutoresizingMaskIntoConstraints="NO" id="N7f-2i-A5F">
@@ -340,7 +340,7 @@
                                 <action selector="didTapReceiveRecord:" destination="-1" eventType="touchUpInside" id="aIF-Eh-CD0"/>
                             </connections>
                         </button>
-                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" delaysContentTouches="NO" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="258" estimatedRowHeight="-1" sectionHeaderHeight="47" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Pzq-y3-gu4" customClass="VIPGiftTableView">
+                        <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" delaysContentTouches="NO" bouncesZoom="NO" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="258" estimatedRowHeight="-1" sectionHeaderHeight="47" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Pzq-y3-gu4" customClass="VIPGiftTableView">
                             <rect key="frame" x="16" y="293" width="382" height="896"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             <connections>
