--- a/HYNewNest/Features(主代码)/VIPComponent/VIPHome/Controller/HYVIPViewController.xib
+++ b/HYNewNest/Features(主代码)/VIPComponent/VIPHome/Controller/HYVIPViewController.xib
@@ -451,8 +451,8 @@
                                     <color key="textColor" red="0.97254901960784312" green="0.93333333333333335" blue="0.67450980392156867" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="江斯丹顿抽不停" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XtI-Dl-nS1">
-                                    <rect key="frame" x="72" y="35.5" width="86" height="14.5"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="劳力士抽不停" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XtI-Dl-nS1">
+                                    <rect key="frame" x="72" y="35.5" width="74" height="14.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
