--- a/HYNewNest/Features(主代码)/WalletComponent/BuyECoinGuide(买币指南)/Controller/HYBuyECoinGuideVC.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/BuyECoinGuide(买币指南)/Controller/HYBuyECoinGuideVC.xib
@@ -86,7 +86,7 @@
                 <constraint firstItem="hWm-j0-Qfp" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="10" id="zxF-l4-pvN"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
-            <point key="canvasLocation" x="82.608695652173921" y="-26.116071428571427"/>
+            <point key="canvasLocation" x="-75" y="-8"/>
         </view>
     </objects>
 </document>
