--- a/HYNewNest/Features(主代码)/LoginRegisterComponent/View/HYTapHanImageCodeView.xib
+++ b/HYNewNest/Features(主代码)/LoginRegisterComponent/View/HYTapHanImageCodeView.xib
@@ -26,7 +26,7 @@
                         <outletCollection property="gestureRecognizers" destination="dnk-It-9wn" appends="YES" id="yiT-VA-9e3"/>
                     </connections>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yv2-wd-nyh">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="加载中.." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yv2-wd-nyh">
                     <rect key="frame" x="0.0" y="74" width="300" height="21"/>
                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.80450563200000003" colorSpace="custom" customColorSpace="calibratedRGB"/>
                     <constraints>
